# rightnow-cli

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  rightnow.py
docs/: workflow.md
rightnow_cli/: __init__.py  cache.py  cli_enhanced.py  compiler.py  models.py  openrouter.py
rightnow_cli/kernels/: __init__.py  matmul.py
tests/: test_bench.py  test_cache.py  test_cli.py  test_openrouter.py
