[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rightnow-cli"
version = "0.1.0"
description = "RightNow AI CUDA Kernel Optimizer - Accelerate your GPU code with AI-powered optimization"
readme = "README.md"
authors = [{name = "RightNow AI Team", email = "jaber@rightnowai.co"}]
license = {text = "Proprietary"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["gpu", "cuda", "optimization", "kernel", "ai", "performance", "rightnow", "code-editor"]
dependencies = [
    "typer[all]>=0.9.0",
    "requests>=2.31.0",
    "torch>=2.0.0",
    "pycuda>=2022.1",
    "numpy>=1.21.0",
    "tqdm>=4.66.0",
    "rich>=13.5.0",
    "backoff>=2.2.1"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-mock>=3.11.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0"
]

[project.urls]
Homepage = "https://rightnowai.co"
"Bug Tracker" = "https://github.com/RightNow-AI/rightnow-cli/issues"
"Documentation" = "https://docs.rightnowai.co/cli"

[project.scripts]
rightnow = "rightnow_cli.cli_enhanced:app"
rightnow-cli = "rightnow_cli.cli_enhanced:app"

[tool.setuptools.packages.find]
include = ["rightnow_cli*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true